--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -47,3 +47,15 @@ button {
   border: none;
   background: none;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  appearance: textfield;
+  /* Firefox */
+  -moz-appearance: textfield;
+}
